# xcrawl_celeb

./: .gitignore  API_DESIGN.md  LICENSE  README.md  TASKS.md  cards.html  cards.js  cards.json  celeb_db.py  celeb_pic_picker.html  celebrity_db.json  celebrity_deck.csv  celebrity_info.py  check_image_dimensions.py  csv_loader.py  pyproject.toml  test_tmdb_api.py  tmdb_api.py  xcrawl_celeb.py
outputs/: cards.js  celebrity_db.json  headshot_overrides.js
src/: filter_api.py  raw_api.py  test_filter_api.py
