[project]
name = "xcrawl-celeb"
version = "0.1.0"
description = ""
authors = [
    {name = "ThanksSkeleton",email = "Thanks.Skeleton@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "themoviedb[full] (>=1.0.2,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pillow (>=11.2.1,<12.0.0)"
]
packages = [{ include = "src" }]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
